--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -142,7 +142,8 @@
     "products": {
       "search-api": "Search API",
       "entry-api": "Entry API",
-      "widgets": "Widgets"
+      "widgets": "Widgets",
+      "uitpas": "UiTPAS API"
     },
     "status": {
       "draft": "Not active",
@@ -176,7 +177,8 @@
       "title": "Documentation",
       "action_title": "Get started with {{product}}",
       "action_url": "https://docs.publiq.be/docs{{product}}",
-      "requirements": "Requirements before going live"
+      "requirements": "Requirements before going live",
+      "test_dataset": "Test dataset"
     }
   },
   "details": {
