--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -142,7 +142,8 @@
     "products": {
       "search-api": "Search API",
       "entry-api": "Entry API",
-      "widgets": "Widgets"
+      "widgets": "Widgets",
+      "uitpas": "UiTPAS API"
     },
     "status": {
       "draft": "Niet actief",
@@ -176,7 +177,8 @@
       "title": "Documentatie",
       "action_title": "Aan de slag met {{product}}",
       "action_url": "https://docs.publiq.be/docs{{product}}",
-      "requirements": "Vereisten om live te gaan"
+      "requirements": "Vereisten om live te gaan",
+      "test_dataset": "Test dataset"
     }
   },
   "details": {
