--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -216,6 +216,9 @@
         "description": "Contacten kunnen de integratie aanpassen, activeren en verwijderen. Eens verwijderd heeft een contact geen toegang meer tot de integratie."
       }
     },
+    "organizers_info": {
+      "title": "Organisaties"
+    },
     "billing_info": {
       "title": {
         "billing": "Facturatiegegevens",
