--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -25,6 +25,7 @@
       "title": "Free",
       "price": "Gratis",
       "description": {
+        "uitpas": "Je staat zelf in voor het bouwen van de koppeling, met ondersteuning van onze documentatie.",
         "entry-api": "Je staat zelf in voor het bouwen van de koppeling, met ondersteuning van onze documentatie."
       }
     },
@@ -101,16 +102,28 @@
   "integration_form": {
     "title": "Integratie toevoegen",
     "type": "Type integratie",
-    "pricing_plan": "Prijsplan",
-    "price_info": "Je betaalt pas wanneer je gebruik wilt maken van echte data. Je probeert eerst alle mogelijkheden met testevenementen.",
+    "pricing_plan": {
+      "label": "Prijsplan",
+      "info": "Je betaalt pas wanneer je gebruik wilt maken van echte data. Je probeert eerst alle mogelijkheden met testevenementen."
+    },
     "integration_name": "Naam integratie",
     "description_name": "Geef een duidelijk titel aan je integratie en vermeld de naam van de organisatie of gemeente waarvoor de integratie gebouwd wordt",
-    "aim": "Doel van de integratie",
-    "description_aim": "Geef een duidelijke, gemotiveerde beschrijving van de integratie die je met het publiq platform wil opzetten (max. 200 karakters)",
-    "contact_label_functional": "Inhoudelijk contact",
-    "contact_label_functional_info": "Het inhoudelijk contact is het inhoudelijk aanspreekpunt voor de integratie (bvb. een medewerker van de organisatie of gemeente waarvoor de integratie is).",
-    "contact_label_technical": "Technisch contact",
-    "contact_label_technical_info": "Het technisch contact is het technische aanspreekpunt voor de integratie (bvb. de ontwikkelaar van de integratie).",
+    "aim": {
+      "label": "Doel van de integratie",
+      "info": "Geef een duidelijke, gemotiveerde beschrijving van de integratie die je met het publiq platform wil opzetten (max. 200 karakters)"
+    },
+    "website": {
+      "label": "Website",
+      "info": "De URL van de website of app waarvoor de integratie gebouwd wordt."
+    },
+    "contact_functional": {
+      "label": "Inhoudelijk contact",
+      "info": "Het inhoudelijk contact is het inhoudelijk aanspreekpunt voor de integratie (bvb. een medewerker van de organisatie of gemeente waarvoor de integratie is)."
+    },
+    "contact_technical": {
+      "label": "Technisch contact",
+      "info": "Het technisch contact is het technische aanspreekpunt voor de integratie (bvb. de ontwikkelaar van de integratie)."
+    },
     "contact_label_contributor": "Medewerker",
     "add": "Medewerker toevoegen",
     "contact": {
@@ -142,7 +155,8 @@
     "products": {
       "search-api": "Search API",
       "entry-api": "Entry API",
-      "widgets": "Widgets"
+      "widgets": "Widgets",
+      "uitpas": "UiTPAS API"
     },
     "status": {
       "draft": "Niet actief",
@@ -151,7 +165,7 @@
       "deleted": "Verwijderd",
       "pending_approval_integration": "In Aanvraag",
       "pending_approval_payment": "In Aanvraag",
-      "pending_approval_integration_description": "Voor de live-integratie is goedkeuring van publiq noodzakelijk. Alle informatie om vlot live te kunnen gaan vind je <0>hier</0>.",
+      "pending_approval_integration_description": "Voor de live-integratie is goedkeuring van publiq nodig. Alle informatie om vlot live te kunnen gaan vind je <0>hier</0>.",
       "before_going_live_link": "https://docs.publiq.be/docs/uitdatabank/entry-api/requirements-before-going-live",
       "pending_approval_payment_description": "Aan de slag met echte data en evenementen? Activeer je Search API integratie (vanaf 125 euro per jaar)",
       "activate": "Activatie aanvragen"
@@ -176,7 +190,8 @@
       "title": "Documentatie",
       "action_title": "Aan de slag met {{product}}",
       "action_url": "https://docs.publiq.be/docs{{product}}",
-      "requirements": "Vereisten om live te gaan"
+      "requirements": "Vereisten om live te gaan",
+      "test_dataset": "Test dataset"
     }
   },
   "details": {
@@ -184,7 +199,8 @@
     "basic_info": {
       "title": "Basisgegevens",
       "name": "Integratienaam",
-      "description": "Beschrijving"
+      "description": "Beschrijving",
+      "website": "Website"
     },
     "contact_info": {
       "title": "Contacten",
