--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -218,7 +218,8 @@
       }
     },
     "organizers_info": {
-      "title": "Organisaties"
+      "title": "Organisaties",
+      "description": "Hieronder vind je een overzicht van de UiTdatabank organisaties waarvoor je acties kan uitvoeren in de UiTPAS API."
     },
     "billing_info": {
       "title": {
