--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -184,6 +184,14 @@
         "coupon": "Coupon",
         "plan": "Abonnement",
         "year": "jaar"
+      },
+      "uitpas": {
+        "partner": "Partner",
+        "organizers": {
+          "title": "UiTdatabank organisaties",
+          "info": "Geef de UiTdatabank organisaties op waarvoor je acties in UiTPAS wilt uitvoeren.",
+          "label": "Organisaties"
+        }
       }
     },
     "documentation": {
