--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -232,7 +232,11 @@
     "organizers_info": {
       "title": "Organizers",
       "description": "Below you see an overview of the UiTdatabank organizers for which you can execute actions in the UiTPAS API.",
-      "add": "Add organizer"
+      "add": "Add organizer",
+      "delete_dialog": {
+        "title": "Remove organizer",
+        "question": "Are you sure you want to remove {{name}} from your integration?"
+      }
     },
     "billing_info": {
       "title": {
