--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -232,7 +232,11 @@
     "organizers_info": {
       "title": "Organisaties",
       "description": "Hieronder vind je een overzicht van de UiTdatabank organisaties waarvoor je acties kan uitvoeren in de UiTPAS API.",
-      "add": "Organisatie toevoegen"
+      "add": "Organisatie toevoegen",
+      "delete_dialog": {
+        "title": "Organisatie verwijderen",
+        "question": "Ben je zeker dat je {{name}} wilt verwijderen van je integratie?"
+      }
     },
     "billing_info": {
       "title": {
