--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -233,6 +233,9 @@
       "title": "Organizers",
       "description": "Below you see an overview of the UiTdatabank organizers for which you can execute actions in the UiTPAS API.",
       "add": "Add organizer",
+      "update_dialog": {
+        "question": "Select the UiTdatabank organizers for which you can execute actions in UiTPAS."
+      },
       "delete_dialog": {
         "title": "Remove organizer",
         "question": "Are you sure you want to remove {{name}} from your integration?"
