--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -221,12 +221,12 @@
       "new": "New employee",
       "delete_dialog": {
         "title": "Delete contact",
-        "question": "Are you sure you want to delete the contact with email address {{email}}?"
+        "question": "Are you sure you want to delete the contact with email address {{email}}? Once deleted, a contact no longer has access to the integration."
       },
       "edit_dialog": "Edit contact",
       "alert": {
         "title": "Danger zone",
-        "description": "Contacts can edit, activate, and delete the integration. Once deleted, a contact no longer has access to the integration."
+        "description": "Contacts can edit, activate, and delete the integration."
       }
     },
     "organizers_info": {
