Remove 'Add Integration' from the navigation bar

--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -17,8 +17,7 @@
     "integrations": "My integrations",
     "opportunities": "Solutions",
     "support": "Support",
-    "hello": "Hello",
-    "integrations/new": "Add integration"
+    "hello": "Hello"
   },
   "pricing_plan": {
     "free": {
