--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -144,6 +144,44 @@
     "submit": "Integratie aanmaken",
     "back": "Terug naar integratieoverzicht"
   },
+  "welcome_section": {
+    "title": "Welkom op het publiq platform 👋",
+    "description": {
+      "part1": "Op dit self-service portaal kan je gemakkelijk toegang krijgen tot de API's en tools die het publiq platform biedt.",
+      "part2": "Na het aanmaken van een integratie zal je meteen toegang krijgen tot de testomgeving. Je ontvangt ook uitgebreide documentatie waarin we je stap voor stap gidsen. Heb je toch nog vragen? Onze supportcollega's staan voor je klaar. Kortom, alles om een naadloze integratie op te zetten!"
+    },
+    "card": {
+      "documentation": "Documentatie",
+      "entry_api": {
+        "title": "Entry API",
+        "description": "Organiseer je zelf activiteiten? Publiceer de evenementen in de UiTdatabank met behulp van de Entry API en wij zorgen ervoor dat je evenementen verspreid worden over talloze online kanalen.",
+        "cta": "Entry API integratie toevoegen",
+        "action_url": "https://platform.publiq.be/nl/integraties/nieuw?type=entry-api",
+        "documentation_url": "https://docs.publiq.be/docs/uitdatabank/entry-api/introduction"
+      },
+      "search_api": {
+        "title": "Search API",
+        "description": "Met deze zoekmachine kan je eventdata (JSON-LD) ophalen uit de UiTdatabank deze publiceren op je eigen website of app.",
+        "cta": "Search API integratie toevoegen",
+        "action_url": "https://platform.publiq.be/nl/integraties/nieuw?type=search-api",
+        "documentation_url": "https://docs.publiq.be/docs/uitdatabank/search-api/introduction"
+      },
+      "widgets": {
+        "title": "Widgets",
+        "description": "Met onze widgets kan je een evenementenagenda configureren zonder dat je daarvoor enige technische kennis nodig hebt. Het is de ideale oplossing voor partners die zorgeloos snel een robuuste agenda willen opzetten.",
+        "cta": "Voeg Widget integratie toe",
+        "action_url": "https://platform.publiq.be/nl/integraties/nieuw?type=widgets",
+        "documentation_url": "https://docs.publiq.be/docs/widgets/inleiding"
+      },
+      "uitpas": {
+        "title": "UiTPAS API",
+        "description": "Werkt jouw organisatie met UiTPAS? Met de UiTPAS API kan je automatisch kortingen toekennen, voordelen uitwisselen en punten sparen voor kaarthouders.",
+        "cta": "Voeg UiTPAS API integratie toe",
+        "action_url": "https://platform.publiq.be/nl/integraties/nieuw?type=uitpas-api",
+        "documentation_url": "https://docs.publiq.be/docs/uitpas/introduction"
+      }
+    }
+  },
   "integrations": {
     "title": "Mijn integraties",
     "add": "Integratie toevoegen",
