--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -13,12 +13,29 @@
     "/subscriptions": "/en/subscriptions"
   },
   "title": "publiq platform",
-  "nav": {
-    "integrations": "My integrations",
-    "opportunities": "Solutions",
-    "support": "Support",
-    "hello": "Hello"
-  },
+    "nav": {
+        "integrations": {
+            "label": "My integrations"
+        },
+        "opportunities": {
+            "label": "Solutions",
+            "link": "https://www.publiq.be/nl/projecten/publiq-platform"
+        },
+        "prices": {
+            "label": "Prices",
+            "link": "https://www.publiq.be/nl/projecten/publiq-platform/prijzen"
+        },
+        "documentation": {
+            "label": "Documentation",
+            "link": "https://docs.publiq.be"
+        },
+        "support": {
+            "label": "Support"
+        },
+        "integrations/new": {
+            "label": "Add integration"
+        }
+    },
   "pricing_plan": {
     "free": {
       "title": "Free",
