Update terms of use link

--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -153,7 +153,7 @@
       "label": "I agree with the <1>processing conditions of UiTPAS<1>",
       "link": "https://www.publiq.be/en/projects/publiq-platform/processing-conditions"
     },
-    "terms_of_use_link": "https://docs.publiq.be/docs/uitdatabank/terms-of-use/terms-of-use",
+    "terms_of_use_link": "https://www.publiq.be/projecten/publiq-platform/gebruiksvoorwaarden",
     "privacy_link": "https://www.publiq.be/en/privacy",
     "coupon": "I have a coupon",
     "code": "Coupon code",
