Update link to terms of use

--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -153,7 +153,7 @@
       "label": "Ik ga akkoord met de <1>verwerkingsvoorwaarden van UiTPAS<1>",
       "link": "https://www.publiq.be/nl/projecten/publiq-platform/algemene-verwerkingsvoorwaarden"
     },
-    "terms_of_use_link": "https://docs.publiq.be/docs/uitdatabank/terms-of-use/terms-of-use",
+    "terms_of_use_link": "https://www.publiq.be/projecten/publiq-platform/gebruiksvoorwaarden",
     "privacy_link": "https://www.publiq.be/nl/privacy",
     "coupon": "Ik heb een coupon",
     "code": "Couponcode",
