Add link to styleguide on Search API integration cards

--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -258,6 +258,9 @@
       "action_url": "https://docs.publiq.be/docs{{product}}",
       "requirements": "Vereisten om live te gaan",
       "test_dataset": "Test dataset"
+    },
+    "styleguide": {
+      "action_title": "Beeldmerken en verwijzigingen"
     }
   },
   "details": {
