--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -258,6 +258,9 @@
       "action_url": "https://docs.publiq.be/docs{{product}}",
       "requirements": "Requirements before going live",
       "test_dataset": "Test dataset"
+    },
+    "styleguide": {
+      "action_title": "Logos and references"
     }
   },
   "details": {
