Tweak translation to match ticket

--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -260,7 +260,7 @@
       "test_dataset": "Test dataset"
     },
     "styleguide": {
-      "action_title": "Logos and references"
+      "action_title": "Style guide"
     }
   },
   "details": {
