--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -172,28 +172,28 @@
         "title": "Entry API",
         "description": "Organiseer je zelf activiteiten? Publiceer de evenementen in de UiTdatabank met behulp van de Entry API en wij zorgen ervoor dat je evenementen verspreid worden over talloze online kanalen.",
         "cta": "Entry API integratie toevoegen",
-        "action_url": "https://platform.publiq.be/nl/integraties/nieuw?type=entry-api",
+        "action_url": "/nl/integraties/nieuw?type=entry-api",
         "documentation_url": "https://docs.publiq.be/docs/uitdatabank/entry-api/introduction"
       },
       "search_api": {
         "title": "Search API",
         "description": "Met deze zoekmachine kan je eventdata (JSON-LD) ophalen uit de UiTdatabank deze publiceren op je eigen website of app.",
         "cta": "Search API integratie toevoegen",
-        "action_url": "https://platform.publiq.be/nl/integraties/nieuw?type=search-api",
+        "action_url": "/nl/integraties/nieuw?type=search-api",
         "documentation_url": "https://docs.publiq.be/docs/uitdatabank/search-api/introduction"
       },
       "widgets": {
         "title": "Widgets",
         "description": "Met onze widgets kan je een evenementenagenda configureren zonder dat je daarvoor enige technische kennis nodig hebt. Het is de ideale oplossing voor partners die zorgeloos snel een robuuste agenda willen opzetten.",
         "cta": "Voeg Widget integratie toe",
-        "action_url": "https://platform.publiq.be/nl/integraties/nieuw?type=widgets",
+        "action_url": "/nl/integraties/nieuw?type=widgets",
         "documentation_url": "https://docs.publiq.be/docs/widgets/inleiding"
       },
       "uitpas": {
         "title": "UiTPAS API",
         "description": "Werkt jouw organisatie met UiTPAS? Met de UiTPAS API kan je automatisch kortingen toekennen, voordelen uitwisselen en punten sparen voor kaarthouders.",
         "cta": "Voeg UiTPAS API integratie toe",
-        "action_url": "https://platform.publiq.be/nl/integraties/nieuw?type=uitpas-api",
+        "action_url": "/nl/integraties/nieuw?type=uitpas-api",
         "documentation_url": "https://docs.publiq.be/docs/uitpas/introduction"
       }
     }
