update text in Dutch

--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -108,7 +108,7 @@
         "title": "Widgets",
         "description": "Kant en klare html-modules die je in je website kan inpassen.",
         "features": [
-          "Zelf of door publiq in te stellen",
+          "Zelf (of door een leverancier) in te stellen",
           "Plug & play oplossing",
           "Uitgebreide configuratiemogelijkheden"
         ]
