update text in English

--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -108,7 +108,7 @@
         "title": "Widgets",
         "description": "Ready-made HTML modules that you can integrate into your website.",
         "features": [
-          "Customizable by publiq or yourself",
+          "Customisable by yourself or your IT provider",
           "Plug & play solution",
           "Extensive configuration options"
         ]
