--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -194,7 +194,8 @@
         "description": "Werkt jouw organisatie met UiTPAS? Met de UiTPAS API kan je automatisch kortingen toekennen, voordelen uitwisselen en punten sparen voor kaarthouders.",
         "cta": "Voeg UiTPAS API integratie toe",
         "action_url": "/nl/integraties/nieuw?type=uitpas",
-        "documentation_url": "https://docs.publiq.be/docs/uitpas/introduction"
+        "documentation_url": "https://docs.publiq.be/docs/uitpas/introduction",
+        "test_dataset_url": "https://docs.publiq.be/docs/uitpas/test-dataset"
       }
     }
   },
