--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -69,7 +69,7 @@
       }
     },
     "uitnetwerk": {
-      "title": "Ik ben lid van het UiTnetwerk of ik bied technische ondersteuning aan een UiTnetwerk-lid.",
+      "title": "Ik ben lid van (of werk namens een lid van) het UiTnetwerk.",
       "price": "Zie lidmaatschap",
       "description": {
         "search-api": "Enkel voor leden van het UiTnetwerk.",
