do not translate network

--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -72,8 +72,8 @@
       "title": "I am a member of (or work on behalf of a member of) the UiT network.",
       "price": "Refer to membership",
       "description": {
-        "search-api": "For UiTnetwork members only.",
-        "widgets": "For UiTnetwork members only."
+        "search-api": "For UiTnetwerk members only.",
+        "widgets": "For UiTnetwerk members only."
       }
     }
   },
